# countdown

./: .gitignore  README.md  pyproject.toml
src/countdwn/: bar.py  cli.py  timeconversion.py
