[project]
name = "countdwn"
version = "0.01"
description = "a simple countdown timer with progress bar"
requires-python = ">= 3.12"
# readme = "README.md"
authors = [
  { name="thrly", email="o.thrly@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# defines the command and script that will be used to run
[project.scripts]
countdown = "countdwn.cli:main"

[project.urls]
repository = "https://github.com/thrly/countdwn"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["countdwn*"]
